--- a/src/Vts.SiteVisit/View/Controls/TextOutputView.xaml
+++ b/src/Vts.SiteVisit/View/Controls/TextOutputView.xaml
@@ -3,8 +3,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="clr-namespace:Vts.SiteVisit.ViewModel"
              VerticalAlignment="Top">
-        <Grid Background="White">
-            <ScrollViewer x:Name="scrollViewer" VerticalScrollBarVisibility="Visible" MaxWidth="1000">
+        <Grid>
+        <ScrollViewer x:Name="scrollViewer" VerticalScrollBarVisibility="Visible" Background="White" MaxWidth="1000">
                 <TextBlock Text="{Binding Text}" MinHeight="75" MinWidth="500"/>
             </ScrollViewer>
         </Grid>
