Added GUI output of MC input validation results; added RangeViewModel "EnableNumber" property to opt-out of showing Number/Count of 2 when the control is to show a range only.

--- a/src/Vts.SiteVisit/View/Controls/RangeView.xaml
+++ b/src/Vts.SiteVisit/View/Controls/RangeView.xaml
@@ -34,7 +34,8 @@
                 <TextBox Width="40" Text="{Binding Stop, Mode=TwoWay}" HorizontalAlignment="Center"/>
             </StackPanel>
 
-            <StackPanel Orientation="Vertical"  Margin="5,0,5,0" HorizontalAlignment="Center">
+            <StackPanel Orientation="Vertical" Margin="5,0,5,0" HorizontalAlignment="Center" 
+                   Visibility="{Binding EnableNumber, Converter={StaticResource myBooleanToVisibilityConverter}}" >
                 <TextBlock Text="Number" TextAlignment="Center"/>
                 <TextBox Width="40" Text="{Binding Number, Mode=TwoWay}" HorizontalAlignment="Center"/>
             </StackPanel>
