--- a/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
@@ -23,50 +23,74 @@
             </charting:Chart.Axes>
         </charting:Chart>
         <!-- Options below the plot -->
-        <StackPanel Orientation="Horizontal" Background="White" Margin="0,5,0,0">
-            <StackPanel Orientation="Vertical" VerticalAlignment="Top" Margin="2,0,10,0">
-                <!-- Hold on checkbox -->
-                <CheckBox Content="{Binding Path=MainResource.Label_HoldOn, Source={StaticResource LocalizedStrings}}" IsChecked="{Binding HoldOn, Mode=TwoWay}" Margin="0,5,0,0"/>
-                <!-- Buttons to clear the plots -->
-                <Button input:CommandService.Command="Plot_ClearPlot"
+        <StackPanel>
+            <StackPanel Orientation="Horizontal" Background="White" Margin="0,5,0,0">
+                <StackPanel Orientation="Vertical" VerticalAlignment="Top" Margin="2,0,10,0">
+                    <!-- Hold on checkbox -->
+                    <CheckBox Content="{Binding Path=MainResource.Label_HoldOn, Source={StaticResource LocalizedStrings}}" IsChecked="{Binding HoldOn, Mode=TwoWay}" Margin="0,5,0,0"/>
+                    <!-- Buttons to clear the plots -->
+                    <Button input:CommandService.Command="Plot_ClearPlot"
                         input:CommandService.CommandParameter="{Binding}"
                         Content="{Binding Path=MainResource.Button_ClearAll, Source={StaticResource LocalizedStrings}}"  
                         Width="80" Height="20" Margin="0,5,0,0"/>
-                <Button input:CommandService.Command="Plot_ClearPlotSingle"
+                    <Button input:CommandService.Command="Plot_ClearPlotSingle"
                         input:CommandService.CommandParameter="{Binding}"
                         Content="{Binding Path=MainResource.Button_ClearNewest, Source={StaticResource LocalizedStrings}}"  
                         Width="80" Height="20" Margin="0,5,0,0"/>
-            </StackPanel>
-            <!--  -->
-            <StackPanel Orientation="Vertical" Margin="5,0,10,0">
-                <StackPanel Orientation="Horizontal" Margin="0">
-                    <TextBlock Text="{Binding Path=MainResource.Label_XAxisSpacing, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
-                    <v:RadioButtonOptionView DataContext="{Binding XAxisSpacingOptionVM}" />
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0">
-                    <TextBlock Text="{Binding Path=MainResource.Label_YAxisSpacing, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
-                    <v:RadioButtonOptionView DataContext="{Binding YAxisSpacingOptionVM}" />
+                <!--  -->
+                <StackPanel Orientation="Vertical" Margin="5,0,10,0">
+                    <StackPanel Orientation="Horizontal" Margin="0">
+                        <TextBlock Text="{Binding Path=MainResource.Label_XAxisSpacing, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
+                        <v:RadioButtonOptionView DataContext="{Binding XAxisSpacingOptionVM}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0">
+                        <TextBlock Text="{Binding Path=MainResource.Label_YAxisSpacing, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
+                        <v:RadioButtonOptionView DataContext="{Binding YAxisSpacingOptionVM}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0">
+                        <TextBlock Text="{Binding Path=MainResource.Label_Normalization, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,2"/>
+                        <v:RadioButtonOptionView DataContext="{Binding PlotNormalizationTypeOptionVM}" />
+                    </StackPanel>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0">
-                    <TextBlock Text="{Binding Path=MainResource.Label_Normalization, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,2"/>
-                    <v:RadioButtonOptionView DataContext="{Binding PlotNormalizationTypeOptionVM}" />
-                </StackPanel>
-            </StackPanel>
-            <!--  -->
-            <StackPanel Orientation="Vertical" Margin="5,0,0,0">
-                <!-- Plot Label -->
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding Path=MainResource.Label_PlotLabel, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,0,4,0" />
-                    <TextBox Width="100" Text="{Binding CustomPlotLabel, Mode=TwoWay}"/>
-                </StackPanel>
-                <!-- Buttons for exporting results -->
-                <Button Content="{Binding Path=MainResource.Button_ExportImage, Source={StaticResource LocalizedStrings}}" 
+                <!--  -->
+                <StackPanel Orientation="Vertical" Margin="5,0,0,0">
+                    <!-- Plot Label -->
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Path=MainResource.Label_PlotLabel, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,0,4,0" />
+                        <TextBox Width="100" Text="{Binding CustomPlotLabel, Mode=TwoWay}"/>
+                    </StackPanel>
+                    <!-- Buttons for exporting results -->
+                    <Button Content="{Binding Path=MainResource.Button_ExportImage, Source={StaticResource LocalizedStrings}}" 
                         Click="Button_Click"
                         Margin="0,5,0,0"/>
-                <Button input:CommandService.Command="Plot_ExportDataToText"
+                    <Button input:CommandService.Command="Plot_ExportDataToText"
                         input:CommandService.CommandParameter="{Binding}"
                         Content="{Binding Path=MainResource.Button_ExportData, Source={StaticResource LocalizedStrings}}"  
                         Margin="0,5,0,0"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                
+                <CheckBox Content="{Binding Path=MainResource.Label_AutoScaleX, Source={StaticResource LocalizedStrings}}" IsChecked="{Binding AutoScaleX, Mode=TwoWay}" Margin="4"/>
+                <ContentControl IsEnabled="{Binding ManualScaleX}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Path=MainResource.Label_MinX, Source={StaticResource LocalizedStrings}}" Margin="4"  VerticalAlignment="Center" />
+                        <TextBox Text="{Binding MinXValue, Mode=TwoWay}" VerticalAlignment="Center" Width="50"/>
+                        <TextBlock Text="{Binding Path=MainResource.Label_MaxX, Source={StaticResource LocalizedStrings}}" Margin="4"  VerticalAlignment="Center" />
+                        <TextBox Text="{Binding MaxXValue, Mode=TwoWay}" VerticalAlignment="Center" Width="50"/>
+                    </StackPanel>
+                </ContentControl>
+                
+                <CheckBox Content="{Binding Path=MainResource.Label_AutoScaleY, Source={StaticResource LocalizedStrings}}" IsChecked="{Binding AutoScaleY, Mode=TwoWay}" Margin="4"/>
+                <ContentControl IsEnabled="{Binding ManualScaleY}" HorizontalContentAlignment="Right">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Path=MainResource.Label_MinY, Source={StaticResource LocalizedStrings}}" Margin="4"  VerticalAlignment="Center" />
+                        <TextBox Text="{Binding MinYValue, Mode=TwoWay}" VerticalAlignment="Center" Width="50"/>
+                        <TextBlock Text="{Binding Path=MainResource.Label_MaxY, Source={StaticResource LocalizedStrings}}" Margin="4" VerticalAlignment="Center" />
+                        <TextBox Text="{Binding MaxYValue, Mode=TwoWay}" VerticalAlignment="Center" Width="50"/>
+                    </StackPanel>
+                </ContentControl>
             </StackPanel>
         </StackPanel>
     </StackPanel>
