--- a/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
@@ -76,9 +76,9 @@
                 <ContentControl IsEnabled="{Binding ManualScaleX}">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Path=MainResource.Label_MinX, Source={StaticResource LocalizedStrings}}" Margin="3"  VerticalAlignment="Center" />
-                        <TextBox Text="{Binding MinXValue, Mode=TwoWay, StringFormat=\{0:0.##e-0;;0\}}" VerticalAlignment="Center" Width="52"/>
+                        <TextBox Text="{Binding MinXValue, Mode=TwoWay, StringFormat={StaticResource ScientificFormat}}" VerticalAlignment="Center" Width="52"/>
                         <TextBlock Text="{Binding Path=MainResource.Label_MaxX, Source={StaticResource LocalizedStrings}}" Margin="3"  VerticalAlignment="Center" />
-                        <TextBox Text="{Binding MaxXValue, Mode=TwoWay, StringFormat=\{0:0.##e-0;;0\}}" VerticalAlignment="Center" Width="52"/>
+                        <TextBox Text="{Binding MaxXValue, Mode=TwoWay, StringFormat={StaticResource ScientificFormat}}" VerticalAlignment="Center" Width="52"/>
                     </StackPanel>
                 </ContentControl>
                 
@@ -86,9 +86,9 @@
                 <ContentControl IsEnabled="{Binding ManualScaleY}" HorizontalContentAlignment="Right">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Path=MainResource.Label_MinY, Source={StaticResource LocalizedStrings}}" Margin="3"  VerticalAlignment="Center" />
-                        <TextBox Text="{Binding MinYValue, Mode=TwoWay, StringFormat=\{0:0.##e-0;;0\}}" VerticalAlignment="Center" Width="52"/>
+                        <TextBox Text="{Binding MinYValue, Mode=TwoWay, StringFormat={StaticResource ScientificFormat}}" VerticalAlignment="Center" Width="52"/>
                         <TextBlock Text="{Binding Path=MainResource.Label_MaxY, Source={StaticResource LocalizedStrings}}" Margin="3" VerticalAlignment="Center" />
-                        <TextBox Text="{Binding MaxYValue, Mode=TwoWay, StringFormat=\{0:0.##e-0;;0\}}" VerticalAlignment="Center" Width="52"/>
+                        <TextBox Text="{Binding MaxYValue, Mode=TwoWay, StringFormat={StaticResource ScientificFormat}}" VerticalAlignment="Center" Width="52"/>
                     </StackPanel>
                 </ContentControl>
             </StackPanel>
