--- a/src/Vts.SiteVisit/View/Application/Panels/SpectralMappingView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/SpectralMappingView.xaml
@@ -114,8 +114,8 @@
                         </StackPanel>
                     </StackPanel>
                     <!-- Single-λ Calculator -->
+                    <TextBlock Text="Single-λ Calculator:" FontSize="16" TextDecorations="Underline"/>
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0" VerticalAlignment="Bottom">
-                        <TextBlock Text="Single-λ Calculator:" FontSize="16" TextDecorations="Underline"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,0,0,0" VerticalAlignment="Center">
                             <TextBlock Text="At λ [nm] = "/>
                             <TextBox Text="{Binding Wavelength, Mode=TwoWay, NotifyOnValidationError=True}" VerticalContentAlignment="Bottom" Width="40"/>
@@ -134,6 +134,10 @@
                                 <TextBlock Width="Auto" Text="{Binding Musp,Converter={StaticResource myDoubleToStringConverter}, ConverterParameter=N3}"/>
                             </StackPanel>
                         </StackPanel>
+                        <Button input:CommandService.Command="UpdateOpticalProperties"
+                                input:CommandService.CommandParameter="{Binding}"
+                                Margin="10,0,0,0" Height="25" VerticalAlignment="Center" 
+                                Content="Update" />
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
