Added hyperlink to XML Notepad 2007 to MonteCarloSolverView

--- a/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
@@ -17,9 +17,18 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="(see " VerticalAlignment="Center"/>
-            <TextBox Text="http://bit.ly/mPDZyl" IsReadOnly="True" />
+            <HyperlinkButton NavigateUri="http://www.microsoft.com/download/en/details.aspx?id=7973" TargetName="_blank">
+                <TextBlock Text="here" VerticalAlignment="Center" />
+                <!--<Image 
+                        Source="/Vts.SiteVisit;Component/Resources/Images/xml_notepad.png"
+                        Height="50" Width="100"
+                        Stretch="None"
+					    VerticalAlignment="Center"
+                        HorizontalAlignment="center"/>-->
+            </HyperlinkButton>
+            <!--<TextBox Text="http://bit.ly/mPDZyl" IsReadOnly="True" />-->
             <!--<HyperlinkButton Content="here" NavigateUri="http://www.microsoft.com/download/en/details.aspx?id=7973"/>-->
-            <TextBlock Text="for a useful XML manipulation tool)" VerticalAlignment="Center"/>
+            <TextBlock Text=" for a useful XML manipulation tool)" VerticalAlignment="Center"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" >
