--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -4,17 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:v="clr-namespace:Vts.SiteVisit.View"
     xmlns:vm="clr-namespace:Vts.SiteVisit.ViewModel"
-    xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions" VerticalAlignment="Top" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignWidth="500" d:DesignHeight="400">
+    xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions" VerticalAlignment="Top" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="400" Width="418">
 
     <UserControl.DataContext>
         <vm:FemSolverViewModel/>
     </UserControl.DataContext>
 
-    <Grid>
+    <Grid Height="359">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="123*"></ColumnDefinition>
+            <ColumnDefinition Width="142*"></ColumnDefinition>
+            <ColumnDefinition Width="153*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -26,13 +26,13 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="EXECUTE A SIMULATION:" FontSize="16" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" />
+        <TextBlock Text="EXECUTE A SIMULATION:" FontSize="16" Grid.ColumnSpan="3" Height="36" Margin="0,-12,0,0" />
         <!-- Optical Properties -->
         <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal">
-            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="341" />
             <StackPanel Orientation="Vertical" VerticalAlignment="Bottom">
                 <TextBlock Text="n (External)" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-                <TextBox HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Parameters.NExt, Mode=TwoWay}" />
+                <TextBox HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Parameters.NExt, Mode=TwoWay}" Width="45" />
             </StackPanel>
         </StackPanel>
         <TextBlock Text="Square Mesh Properties:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10,0,0" />
@@ -41,27 +41,27 @@
             <TextBox Text="{Binding Parameters.Length, Mode=TwoWay}" Width="40"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="3">
-            <TextBlock Text="Spacial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.SMeshLevel, Mode=TwoWay}" Width="40" HorizontalAlignment="Left" Margin="20,0"/>
-            <TextBlock Text="2" FontSize="14"/>
+            <TextBlock Text="Spacial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="130" />
+            <TextBox Text="{Binding Parameters.SMeshLevel, Mode=TwoWay}" Width="30" HorizontalAlignment="Left" Margin="20,0" Height="22" />
+            <TextBlock Text=" 2" FontSize="24"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="2" Grid.Row="3">
-            <TextBlock Text="Angular Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.AMeshLevel, Mode=TwoWay}" Width="40" HorizontalAlignment="Left" Margin="20,0"/>
-            <TextBlock Text="2" FontSize="14"/>
+            <TextBlock Text="Angular Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="141" />
+            <TextBox Text="{Binding Parameters.AMeshLevel, Mode=TwoWay}" Width="30" HorizontalAlignment="Left" Margin="20,0"/>
+            <TextBlock Text=" 2" FontSize="24"/>
         </StackPanel>
         <TextBlock Text="Multi-grid and Iteration Parameters:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" />
         <StackPanel Orientation="Vertical" Margin="5" Grid.Column="0" Grid.Row="5" VerticalAlignment="Bottom">
-            <TextBlock Text="Multi-grid Solution Type" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.MgMethod, Mode=TwoWay}" Margin="5" Width="40"/>
+            <TextBlock Text="Multi-grid Type" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.MgMethod, Mode=TwoWay}" Margin="5" Width="40" TextAlignment="Center"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Margin="5" Grid.Column="1" Grid.Row="5" VerticalAlignment="Bottom">
             <TextBlock Text="Maximum Iterations" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.NIterations, Mode=TwoWay}" Margin="5" Width="40"/>
+            <TextBox Text="{Binding Parameters.NIterations, Mode=TwoWay}" Margin="5" Width="40" TextAlignment="Center"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Margin="5" Grid.Column="2" Grid.Row="5" VerticalAlignment="Bottom">
             <TextBlock Text="Convergence Tolerance" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.ConvTol, Mode=TwoWay}" Margin="5" Width="40"/>
+            <TextBox Text="{Binding Parameters.ConvTol, Mode=TwoWay}" Margin="5" Width="75" TextAlignment="Center"/>
         </StackPanel>
         <Button Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Command="{Binding ExecuteFemSolverCommand}"
                 Content="Run 2D MG-RTE"  
