--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -37,7 +37,7 @@
         </StackPanel>
         <TextBlock Text="Square Mesh Properties:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10,0,0" />
         <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="3">
-            <TextBlock Text="Length [mm]" Margin="5" HorizontalAlignment="Center"/>
+            <TextBlock Text="Side Length [mm]" Margin="5" HorizontalAlignment="Center"/>
             <TextBox Text="{Binding Parameters.Length, Mode=TwoWay}" Width="40"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="3">
