--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -26,7 +26,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="EXECUTE A SIMULATION:" FontSize="16" Grid.ColumnSpan="3" Height="36" Margin="0,-12,0,0" />
+       
         <!-- Optical Properties -->
         <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal">
             <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="341" />
@@ -41,7 +41,7 @@
             <TextBox Text="{Binding Parameters.Length, Mode=TwoWay}" Width="40"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="3">
-            <TextBlock Text="Spacial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="130" />
+            <TextBlock Text="Spatial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="130" />
             <TextBox Text="{Binding Parameters.SMeshLevel, Mode=TwoWay}" Width="30" HorizontalAlignment="Left" Margin="20,0" Height="22" />
             <TextBlock Text=" 2" FontSize="24"/>
         </StackPanel>
