Updated the GUI to comment out the FEM panel for the release Changed the output textbox max height to 160 so it fits better on the screen Removed a namespace reference that was causing an error in whitelist

--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -87,11 +87,11 @@
                             DataContext="{Binding MonteCarloSolverVM}"
                             Background="LightSteelBlue"/>
                 </controls:TabItem>
-                <controls:TabItem Name="tabFem" Header="FEM Solver Panel">
+                <!--<controls:TabItem Name="tabFem" Header="FEM Solver Panel">
                     <local:FemSolverView
                             DataContext="{Binding FemSolverVM}"
                             Background="LightSteelBlue"/>
-                </controls:TabItem>
+                </controls:TabItem>-->
             </controls:TabControl>
 
                 <controls:TabControl x:Name="outputTabControl"
