--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -10,62 +10,95 @@
         <vm:FemSolverViewModel/>
     </UserControl.DataContext>
 
-    <Grid Height="359">
+    <Grid Height="400">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="123*"></ColumnDefinition>
-            <ColumnDefinition Width="142*"></ColumnDefinition>
-            <ColumnDefinition Width="153*"></ColumnDefinition>
+            <ColumnDefinition Width="81*"></ColumnDefinition>
+            <ColumnDefinition Width="62*"></ColumnDefinition>
+            <ColumnDefinition Width="68*"></ColumnDefinition>
+            <ColumnDefinition Width="69*"></ColumnDefinition>
+            <ColumnDefinition Width="70*"></ColumnDefinition>
+            <ColumnDefinition Width="70*"></ColumnDefinition>
+            
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="78*"></RowDefinition>
+            <RowDefinition Height="55*"></RowDefinition>
+            <RowDefinition Height="55*"></RowDefinition>
+            <RowDefinition Height="22*"></RowDefinition>            
+            <RowDefinition Height="70*"></RowDefinition>
+            <RowDefinition Height="22*"></RowDefinition>            
+            <RowDefinition Height="81*"></RowDefinition>
+            
         </Grid.RowDefinitions>
 
-       
+
         <!-- Optical Properties -->
-        <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal">
-            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="341" />
-            <StackPanel Orientation="Vertical" VerticalAlignment="Bottom">
-                <TextBlock Text="n (External)" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
-                <TextBox HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Parameters.NExt, Mode=TwoWay}" Width="45" />
-            </StackPanel>
+        <StackPanel Grid.ColumnSpan="5" Orientation="Horizontal" Margin="0,0,8,13">
+            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding MediumOpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="341" Loaded="OpticalPropertyView_Loaded" Height="67" />
         </StackPanel>
-        <TextBlock Text="Square Mesh Properties:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10,0,0" />
-        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="3">
+
+        <StackPanel Orientation="Vertical" Margin="20,0,0,0" Grid.Column="4" Grid.ColumnSpan="2" VerticalAlignment="Bottom" Height="66">
+            <TextBlock Text="n (External)" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center" Width="73" Height="17" />
+            <TextBox HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Parameters.NExt, Mode=TwoWay}" Width="45" Height="23" />
+        </StackPanel>
+
+        <StackPanel Grid.ColumnSpan="5" Orientation="Horizontal" Margin="0,68,20,0" Grid.RowSpan="2">
+            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding InclusionOpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="341" Loaded="OpticalPropertyView_Loaded" Height="67" />
+        </StackPanel>
+
+        <StackPanel Orientation="Vertical" Grid.Row="2">
+            <TextBlock Text="Radius [mm]" Margin="5" HorizontalAlignment="Left" Width="85" />
+            <TextBox Text="{Binding Parameters.InRad, Mode=TwoWay}" Width="41"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="2" Margin="0,0,53,0" Grid.ColumnSpan="2">
+            <TextBlock Text="x [mm]" Margin="5" HorizontalAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.InX, Mode=TwoWay}" Width="40"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Vertical" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="0,0,19,0">
+            <TextBlock Text="z [mm]" Margin="5" HorizontalAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.InZ, Mode=TwoWay}" Width="40"/>
+        </StackPanel>
+
+        <TextBlock Text="Square Mesh Properties:" TextDecorations="Underline" FontSize="16" Grid.Row="3" Grid.ColumnSpan="4" />
+        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2">
             <TextBlock Text="Side Length [mm]" Margin="5" HorizontalAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.Length, Mode=TwoWay}" Width="40"/>
+            <TextBox Text="{Binding Parameters.Length, Mode=TwoWay}" Width="31"/>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="3">
-            <TextBlock Text="Spatial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="130" />
+        
+        <StackPanel Orientation="Vertical" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="3" Margin="0,0,62,0">
+            <TextBlock Text="Spatial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="130" Height="16" />
             <TextBox Text="{Binding Parameters.SMeshLevel, Mode=TwoWay}" Width="30" HorizontalAlignment="Left" Margin="20,0" Height="22" />
-            <TextBlock Text=" 2" FontSize="24"/>
+            <TextBlock Text=" 2" FontSize="20" Height="30" />
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="2" Grid.Row="3">
-            <TextBlock Text="Angular Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="141" />
-            <TextBox Text="{Binding Parameters.AMeshLevel, Mode=TwoWay}" Width="30" HorizontalAlignment="Left" Margin="20,0"/>
-            <TextBlock Text=" 2" FontSize="24"/>
+        
+        <StackPanel Orientation="Vertical" Grid.Column="4" Grid.Row="4" Grid.ColumnSpan="5">
+            <TextBlock Text="Angular Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" Width="124" Height="17" />
+            <TextBox Text="{Binding Parameters.AMeshLevel, Mode=TwoWay}" Width="30" HorizontalAlignment="Left" Margin="20,0" Height="20" />
+            <TextBlock Text=" 2" FontSize="20" Height="27" />
         </StackPanel>
-        <TextBlock Text="Multi-grid and Iteration Parameters:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" />
-        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="0" Grid.Row="5" VerticalAlignment="Bottom">
-            <TextBlock Text="Multi-grid Type" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.MgMethod, Mode=TwoWay}" Margin="5" Width="40" TextAlignment="Center"/>
+        
+        <TextBlock Text="Multi-grid and Iteration Parameters:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5" />
+        <StackPanel Orientation="Vertical" Margin="0,0,45,30" Grid.Row="6" VerticalAlignment="Bottom" Height="55" Grid.ColumnSpan="2">
+            <TextBlock Text="Multi-grid Type" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Left"/>
+            <TextBox Text="{Binding Parameters.MgMethod, Mode=TwoWay}" Margin="5" Width="65" TextAlignment="Center"/>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="1" Grid.Row="5" VerticalAlignment="Bottom">
-            <TextBlock Text="Maximum Iterations" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.NIterations, Mode=TwoWay}" Margin="5" Width="40" TextAlignment="Center"/>
+        
+        <StackPanel Orientation="Vertical" Margin="23,0,4,30" Grid.Column="1" Grid.Row="6" VerticalAlignment="Bottom" Height="55" Grid.ColumnSpan="2">
+            <TextBlock Text="Max. Iterations" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.NIterations, Mode=TwoWay}" Margin="5" Width="65" TextAlignment="Center"/>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="2" Grid.Row="5" VerticalAlignment="Bottom">
-            <TextBlock Text="Convergence Tolerance" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
-            <TextBox Text="{Binding Parameters.ConvTol, Mode=TwoWay}" Margin="5" Width="75" TextAlignment="Center"/>
+
+        <StackPanel Orientation="Vertical" Margin="0,0,40,30" Grid.Column="3" Grid.Row="6" VerticalAlignment="Bottom" Height="55" Grid.ColumnSpan="2">
+            <TextBlock Text="Tolerance" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.ConvTol, Mode=TwoWay}" Margin="5" Width="65" TextAlignment="Center"/>
         </StackPanel>
-        <Button Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Command="{Binding ExecuteFemSolverCommand}"
+                
+        <Button Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Command="{Binding ExecuteFemSolverCommand}"
                 Content="Run 2D MG-RTE"  
-                Width="100" Height="30" Margin="5"/>
+                Width="98" Height="38" Margin="0,0,5,12" Grid.RowSpan="2" />
+        
     </Grid>
 </UserControl>
 
