--- a/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
@@ -140,7 +140,7 @@
 
                                             <StackPanel Orientation="Vertical" Margin="5,0,5,0">
                                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                                    <TextBlock Text="Y ["/>
+                                                    <TextBlock Text="Dy ["/>
                                                     <TextBlock Text="{Binding Units}" />
                                                     <TextBlock Text="]"/>
                                                 </StackPanel>
@@ -149,7 +149,7 @@
 
                                             <StackPanel Orientation="Vertical"  Margin="5,0,5,0" HorizontalAlignment="Center">
                                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                                    <TextBlock Text="Z ["/>
+                                                    <TextBlock Text="Dz ["/>
                                                     <TextBlock Text="{Binding Units}" />
                                                     <TextBlock Text="]"/>
                                                 </StackPanel>
